# fauxpenstack

./: .gitignore  Makefile  README.md  auth.json  conf.toml.example  fauxpenstack.service  fauxpenstack.socket  novarc.sample  pyproject.toml
src/fauxpenstack/: __main__.py  brisk.py  glue.py  metadata.py  middlewares.py  neutrino.py  peek.py  plaster.py  pulsar.py  util.py
